# aspects-data

./: .gitignore  Search.ipynb  prompt.md  pyproject.toml  sort.sh  выступления.txt  доклады.txt  материал информация.txt  преподаватель.txt  тесты.txt
.ipynb_checkpoints/: Emotional-checkpoint.ipynb
augmentation/: .env.example  .gitignore  Untitled.ipynb  augmentation.ipynb  augmentation.py  benchmark.py  config.py  data_provider.py  generation.py  main.py  openai_client.py  pyproject.toml  utilities.py
augmentation/prompts/: prompt_augmentation_client.txt  prompt_augmentation_system.txt  prompt_generation_client.txt  prompt_generation_system.txt
data/datasets/: .~lock.all_dataset.csv#  feedbacks.csv  otzyvus.csv
data/generation/: generate_synt.py
data/otzyvus-annotated/: genprompt.sh  prompt.md  sort.sh  stat.sh  баллы__оценки.txt  видео-уроки.txt  выступления.txt  доклады.txt  домашняя работа.txt  задания задачи.txt  задания__задачи.txt  зачет__экзамен.txt  игры.txt  игры__интерактивность.txt  лекции.txt  литература__учебники.txt  материал информация.txt  материал__информация__темы.txt  мусор.txt  онлайн-курс.txt  практики семинары.txt  практики__семинары.txt  презентации.txt  преподаватель.txt  проекты.txt  тесты.txt  фильмы.txt  эссе.txt
data/otzyvus-annotated/annotated_files_ai/: баллы__оценки.txt  видео-уроки.txt  выступления.txt  доклады.txt  домашняя работа.txt  задания__задачи.txt  зачет__экзамен.txt  игры__интерактивность.txt  лекции.txt  литература__учебники.txt  материал__информация__темы.txt  мусор.txt  онлайн-курс.txt  практики__семинары.txt  презентации.txt  преподаватель.txt  проекты.txt  тесты.txt  фильмы.txt  эссе.txt
data/otzyvus-annotated/annotated_files_all/: домашняя работа.txt  лекции.txt  материал__информация__темы.txt  презентации.txt  фильмы.txt
data/otzyvus-annotated/annotated_files_real/: баллы__оценки.txt  видео-уроки.txt  выступления.txt  доклады.txt  домашняя работа.txt  задания__задачи.txt  зачет__экзамен.txt  игры__интерактивность.txt  лекции.txt  литература__учебники.txt  материал__информация__темы.txt  мусор.txt  онлайн-курс.txt  практики__семинары.txt  презентации.txt  преподаватель.txt  проекты.txt  тесты.txt  (+2 more)
data/train_test_split/: split.py
dump_to_annotation/: Untitled.ipynb  otzyvus_dump_to_annotation_csv.ipynb
dump_to_annotation/.ipynb_checkpoints/: otzyvus_dump_to_annotation_csv-checkpoint.ipynb
stage_0_preprocessing/: preprocessing.ipynb
stage_0_preprocessing/.ipynb_checkpoints/: preprocessing-checkpoint.ipynb
stage_1_keywords_extraction/: BERTopic - WIP.ipynb  BERTopic - google colab edition.ipynb
stage_1_keywords_extraction/.ipynb_checkpoints/: BERTopic - WIP-checkpoint.ipynb
stage_2_keywords_search/: Untitled.ipynb  test_search_accuracy.ipynb
stage_2_keywords_search/.ipynb_checkpoints/: test_search_accuracy-checkpoint.ipynb
test/: confussion.py  eval.py  test.py
tests/: test_search_accuracy.py
train/: .gitignore  dataset_generation.py  dataset_split.py  train.py
(+1 files in other folders)
