[tool.poetry]
name = "abas-study-feedbacks-research"
version = "0.1.0"
description = ""
authors = ["daniil7 <daniil.k@mail.ru>", "bulatovv <albert.fz@yandex.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "2.3.1", source="torch"}
transformers = {extras = ["torch"], version = "^4.41.2"}
evaluate = "^0.4.2"
datasets = "^2.19.2"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = 'supplemental'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
