[tool.poetry]
name = "gptabuse"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
telethon = "^1.35.0"
pandas = "^2.2.2"
requests = "^2.32.1"
openai = "^1.30.3"
simple-term-menu = "^1.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
